# hfpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: documentation.yaml  unit_tests.yaml
cmake/: Finddoctest.cmake  Findimmer.cmake  hfppMacros.cmake
include/hfpp/: catchment.hpp  fabric.hpp  nexus.hpp  realization.hpp
include/hfpp/catchment/: builder.hpp  definition.hpp  fwd.hpp  proxy.hpp  realization.hpp
include/hfpp/nexus/: definition.hpp  fwd.hpp  proxy.hpp
include/hfpp/realization/: fwd.hpp
lib/hfpp/: CMakeLists.txt  catchment.hpp  fabric.hpp  nexus.hpp
lib/hfpp/detail/: types.hpp
lib/hfpp/detail/catchment/: CMakeLists.txt  builder.cpp  builder.hpp  definition.cpp  definition.hpp  fwd.hpp  realization.hpp
lib/hfpp/detail/fabric/: CMakeLists.txt  fabric.hpp
lib/hfpp/detail/nexus/: CMakeLists.txt  definition.cpp  definition.hpp  fwd.hpp
src/hfpp/catchment/: builder.cpp  definition.cpp  proxy.cpp
src/hfpp/nexus/: definition.cpp  proxy.cpp
tests/: CMakeLists.txt  test_catchment.cpp  test_fabric.cpp
